	  (2015-08-21).
	* recvfrom(): Correct wait for new data when NET_UDP_READAHEAD is
	  enabled.  Fix size accounting when recvfrom_udpreadahead() sets
	  state.rf_recvlen == -1.  I have not checked if data are accumulated
	  to the right position in the buffer however. From Pavel Pisa
	  (2015-08-21).
	* sched/wdog/wd_create.c:  Correct a counting error in the number
	  of available watchdog timers.  When the number of free timers is
	  low, the counter could be incremented below zero (2015-08-21).
	* arch/arm/src/stm32: Add OTG support for STM32F44x.  From David
	  Sidrane (2015-08-21).
	* arch/arm/src/lpc17: Actually implement options to use external
	  SDRAM and or SRAM for the heap.  From Pavel Pisa (2015-08-21).
	* gethostbyname(): correct returned address format when DNS is used.
	  The hostent.h_addr_list should point to raw in_addr or in6_addr
	  as defined in the standard. Original implementation used that
	  for numeric addresses but for DNS lookup returned pointer to
	  whole sockaddr_in or sockaddr_in6.  From Pavel Pisa  (2015-08-21).
	* tools/mksymtab: declare g_symtab array as conts to occupy RO
	  section (Flash).  From Pavel Pisa (2015-08-23).
	* libc/libc.csv and syscalls/syscalls.csv:  Define some symbol
	  export conditions, correct errno and add sleep and usleep. From
	  Pavel Pisa (2015-08-23).
	* net/ ande include/nuttx/net:  Remove references to PPP as a
	  link layer protocol (2015-08-24).
	* net/, drivers/net, and include/net:  Add definitions to support
	  a local loopback device and link layer (2015-08-24).
	* libc/netdb, net/loopback, include/nuttx/net:  Add NetDB support
	  for the local loopback device (2015-08-24).
	* drivers/net/loopback.c:  Add basic prototype of a local loopback
	  device (2015-08-24).
	* networking:  Correct return value from psock_tcp_accept().  From
	  SaeHie Park (2015-08-25).
	* drivers/mtd/st25fl1.c: Add a driver for ST25L1*K QuadSPI parts
	  (2015-08-15).
