@@ -10883,4 +10883,8 @@
 	  SaeHie Park (2015-08-25).
 	* drivers/mtd/st25fl1.c: Add a driver for ST25L1*K QuadSPI parts
 	  (2015-08-15).
+	* include/nuttx/spi/qspi.h:  Develop a new interface for QSPI, at
+	  least the way that QSPI is implemented on the SAMV71.  Originally
+	  planned to use the SPI interface, but it is just now compatible
+	  with the SAMV71 QSPI hardware (2015-08-15).
 
